@@ -1,10 +1,10 @@
 *SVN*
 
+* Added stripping of _id to String#humanize, so "employee_id" becomes "Employee" #1574 [Justin French]
+
 * Factor Fixnum and Bignum extensions into Integer extensions [Nicholas Seckar]
 
 * Hooked #ordinalize into Fixnum and Bignum classes. [Nicholas Seckar, danp]
-
-* Added stripping of _id to humanize, so "employee_id" becomes "Employee" #1574 [Justin French]
 
 * Added Fixnum#ordinalize to turn 1.ordinalize to "1st", 3.ordinalize to "3rd", and 10.ordinalize to "10th" and so on #1724 [paul@cnt.org]
 
